--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -87,3 +87,21 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+.display-code {
+  font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
+  background-color: #000;
+}
+
+pre {
+  border: 1px solid #000;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+pre > code {
+  tab-size: 4;
+  color: #fff;
+  overflow-x: auto;
+  padding: 0;
+}
