Add surface and refactor the views

--- a/lib/code_snippet_generator_web/live/snippet_live/form_component.html.heex
+++ b/lib/code_snippet_generator_web/live/snippet_live/form_component.html.heex
@@ -8,17 +8,17 @@
     phx-target={@myself}
     phx-change="validate"
     phx-submit="save">
-  
+
     <%= label f, :status %>
     <%= text_input f, :status %>
     <%= error_tag f, :status %>
-  
+
     <%= label f, :result %>
     <%= text_input f, :result %>
     <%= error_tag f, :result %>
-  
+
     <div>
-      <%= submit "Save", phx_disable_with: "Saving..." %>
+      {submit "Save", phx_disable_with: "Saving..."}
     </div>
   </.form>
 </div>
